# open-advocacy

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  db_diagnostic.py  pyproject.toml  run.py  seed_dummy_data.py
backend/app/: main.py
backend/app/api/routes/: auth.py  entities.py  groups.py  jurisdictions.py  location.py  (+2 more)
backend/app/core/: auth.py  config.py
backend/app/db/: base.py  dependencies.py  init_db.py  provider_factory.py  session.py  sql.py
backend/app/geo/: base.py  geocoding_service.py  postgres.py  provider_factory.py  sqlite.py
backend/app/imports/: base.py  orchestrator.py
backend/app/scripts/: chicago_city_council_setup.py  db_diagnostic.py  import_chicago_ward_geojson.py  import_geojson.py  seed_dummy_data.py
backend/app/services/: district_service.py  entity_service.py  group_service.py  jurisdiction_service.py  project_service.py  service_factory.py  status_service.py  user_service.py
backend/app/utils/: data_loader.py  project.py  status.py
backend/data/: chicago-wards.geojson  dummy_entities.json  dummy_groups.json  dummy_jurisdictions.json  dummy_projects.json  dummy_status_records.json  il_2020_state_lower_2021-09-24.json  il_2020_state_upper_2021-09-24.json
backend/scripts/: add_super_admin.py  chicago_city_council_setup.py  db_diagnostic.py  illinois_state_legislators_setup.py  import_adu_project_data.py  import_chicago_ward_geojson.py  import_data.py  import_example_project_data.py  import_illinois_geojson.py  init_db.py  initialize_app.py  seed_dummy_data.py
(+76 files in other folders)
